# lol-cal

./: Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  logging.rs  main.rs  resources.rs
src/config/: error.rs  mod.rs  parser.rs  utils.rs
src/net/: leagues.rs  mod.rs  schedule.rs
src/widgets/: events.rs  fillchar.rs  leagues.rs  mod.rs
