[package]
name = "lol-cal"
version = "0.1.1"
description = "A lolesports schedule viewer"
authors = ["Johannes Herman <johannes.herman@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["serde", "macros", "unstable-widget-ref"] }
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.41", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
lazy_static = "1.5.0"
directories = "5.0.1"
tracing = "0.1.41"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
